# odc

./: .gitignore  .pylintrc  CMakeLists.txt  Makefile  README.md  __init__.py  all_gather.py  build_nvshmem_wrapper.sh  build_package.sh  dev-build.sh  launch.sh  launch2.sh  launch_prof.sh  param_size.py  patch_fsdp.py  plot_profile.py  pyproject.toml  reduce_scatter.py  run.sh  run_tests.sh  setup.py  utils.py
csrc/nvshmem_triton/: CMakeLists.txt  wrapper.cu
csrc/tensor_ipc/: CMakeLists.txt  binding.cpp  tensor_ipc.cu
examples/: all_gather.py  reduce_scatter.py
examples/FSDP2/: checkpoint.py  example.py  model.py  run_example.sh  utils.py
examples/fsdp1_hybrid/: args.py  data.py  lm_head.py  packing.py  preprocess_dataset.py  requirements.txt  run.sh  torch_fsdp.py  torch_fsdp2.py
examples/llm_training/: lm_head.py  packing.py  preprocess_dataset.py  requirements.txt  run.sh  torch_fsdp.py  torch_fsdp2.py
lib_tensor_ipc/: binding.cpp  pyproject.toml
odc/: __init__.py
odc/fsdp/: __init__.py  fsdp1.py  fsdp2.py  patch_fsdp1.py
odc/primitives/: __init__.py  gather.py  nvshmem_triton.py  scatter_accumulate.py  scatter_accumulate_intra_node.py  utils.py
tensor_ipc/: setup.py
tests/nvshmem_triton/: test_atomic.py  test_g.py  test_getmem.py  test_p.py  test_putmem.py  test_utils.py
