[build-system]
requires = [
    "setuptools>=62",
    "wheel",
    "torch",
    "nvidia-nvshmem-cu12",
]
build-backend = "setuptools.build_meta"

[project]
name = "odc"
version = "0.1.0-alpha.0"
description = "On-demand Communication Library"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "torch",
    "triton>=3.4.0",
    "nvidia-nvshmem-cu12",
    "nvshmem4py-cu12",
    "loguru",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/sail-sg/odc"
Repository = "https://github.com/sail-sg/odc"
Issues = "https://github.com/sail-sg/odc/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "black",
    "isort",
    "pylint>=4.0.0",
]

[tool.black]
line-length = 100
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 100
